--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,49 +11,17 @@ on:
 
 env:
   AWS_REGION: us-east-1
-  ECR_REPOSITORY_PREFIX: vmenu
-  ECS_CLUSTER: vmenu-cluster
-  ECS_SERVICE_BACKEND: vmenu-backend-service
-  ECS_SERVICE_FRONTEND: vmenu-frontend-service
-  ECS_SERVICE_WEBSOCKET: vmenu-websocket-service
-  TASK_DEFINITION_BACKEND: vmenu-backend-task
-  TASK_DEFINITION_FRONTEND: vmenu-frontend-task
-  TASK_DEFINITION_WEBSOCKET: vmenu-websocket-task
+  ECR_REPOSITORY_PREFIX: vintiq
+  ECS_CLUSTER: vintiq-cluster
+  ECS_SERVICE_BACKEND: vintiq-backend-service
+  ECS_SERVICE_FRONTEND: vintiq-frontend-service
+  ECS_SERVICE_WEBSOCKET: vintiq-websocket-service
+  TASK_DEFINITION_BACKEND: vintiq-backend-task
+  TASK_DEFINITION_FRONTEND: vintiq-frontend-task
+  TASK_DEFINITION_WEBSOCKET: vintiq-websocket-task
 
 jobs:
-  test:
-    runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        project: [vmenu-production, tv-menu-designer]
-    
-    steps:
-      - uses: actions/checkout@v4
-      
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: '20'
-          cache: 'npm'
-          cache-dependency-path: '${{ matrix.project }}/package-lock.json'
-      
-      - name: Install dependencies
-        run: |
-          cd ${{ matrix.project }}
-          npm ci
-      
-      - name: Run linter
-        run: |
-          cd ${{ matrix.project }}
-          npm run lint || true
-      
-      - name: Run tests
-        run: |
-          cd ${{ matrix.project }}
-          npm test || true
-
   build-and-push:
-    needs: test
     runs-on: ubuntu-latest
     if: github.ref == 'refs/heads/main' || github.ref == 'refs/heads/develop'
     
